test/implicitDup23_5.slq
def main(){
	x := H(0);
	y := dup(x);
	z := y;
	if y { /// error
		x := H(x);
	}
	return x;
}
